Fixes spacing issues

--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ a {
   position: relative;
   width: 100%;
   max-width: 100%;
-  margin: 0 auto;
+  margin: 30px auto;
   /* overflow: hidden; */
 }
 
@@ -224,10 +224,10 @@ a {
 }
 
 .images img {
-  width: min(300px, 80vw);
+  width: min(400px, 80vw);
   max-width: 100%;
   height: auto;
-  max-height: 300px;
+  max-height: 400px;
   object-fit: contain;
   flex-shrink: 0;
   margin: 0 5px;
